rtspsrc: element_make_from_addr does not support hostnames
As per the recent commit 0aa9d8ad introduced in merge request !1819 (merged), the location
property for rtspsrc
is no longer capable of handling host-names in any RTSP URIs provided to the element. Attempting to provide an RTSP URI with a host-name results in the following error message:
GLib-GIO-CRITICAL **: 02:17:18.727: g_inet_address_get_family: assertion 'G_IS_INET_ADDRESS (address)' failed
The element_make_from_addr
function (found here: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/blob/main/subprojects/gst-plugins-good/gst/rtsp/gstrtspsrc.c#L4455) seems to suggest that the address supplied to the function is assumed to be a IPv4/IPv6 address and therefore does not perform any host-name resolution prior to creating a new GInetAddress
instance.
Would it be possible to add support for host-names back into rtspsrc
by performing host-name resolution prior to passing the address to element_make_from_addr
?